@@ -89,8 +89,6 @@ class tx_rtehtmlarea_pi1 {
 		}
 		if (empty($dictionaryList)) {
 			$dictionaryList = t3lib_div::_POST('showDictionaries');
-				// Applying EM variable DEPRECATED as of TYPO3 4.3.0
-			$dictionaryList = $dictionaryList ? $dictionaryList : trim($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$this->extKey]['plugins']['SpellChecker']['dictionaryList']);
 		}
 		$dictionaryArray = t3lib_div::trimExplode(',', $dictionaryList, 1);
 		$restrictToDictionaries = t3lib_div::_POST('restrictToDictionaries');
@@ -101,8 +99,7 @@ class tx_rtehtmlarea_pi1 {
 			$dictionaryArray[] = 'en';
 		}
 		$this->dictionary = t3lib_div::_POST('dictionary');
-			// Applying EM variable DEPRECATED as of TYPO3 4.3.0
-		$defaultDictionary = $this->dictionary ? $this->dictionary : trim($TYPO3_CONF_VARS['EXTCONF'][$this->extKey]['plugins']['SpellChecker']['defaultDictionary']);
+		$defaultDictionary = $this->dictionary;
 		if (!$defaultDictionary || !in_array($defaultDictionary, $dictionaryArray)) {
 			$defaultDictionary = 'en';
 		}
